
4.Support noreply for add,set,replace,cas,append,prepend,delete,incr/decr,flush_all,verbosity protocols.
Add some new methods in MemcachedClient,include:

setWithNoReply,addWithNoReply,replaceWithNoReply,appendWithNoReply,prependWithNoReply,casWithNoReply
deleteWithNoReply,incr(decr)WithNoReply,flushAllWithNoReply,setLoggingLevelVerbosityWithNoReply

5.bug fixed. Issue 35,Issue 36,Issue 37 etc.

--------------------End--------------------------

******************************************************************

2009-06-07
--------xmemcached 1.1.1-Released-----------
1.Migrate yanf4j to 0.61
2.Add many unit tests.Refactoring for a good Structure,It is ready to introduce 
  the memcached binary protocol support.
3.Deprecated some classes and interfaces.Include:
  net.rubyeye.xmemcached.MemcachedProtocolHandler
  net.rubyeye.xmemcached.buffer.ArrayIoBuffer
  
4.Deprecated some methods.Includes:
                     Deprecated                                                Instead
                     
    net.rubyeye.xmemcached.utils.AddrUtil.getAddress(String server) =====> getOneAddress(server)
    net.rubyeye.xmemcached.MemcachedClient.version()                =====>  getVersions()       
    net.rubyeye.xmemcached.MemcachedClientMemcachedClient.stats(String host, long timeout)
    net.rubyeye.xmemcached.MemcachedClientMemcachedClient.stats(String host)
    
5.Add some new methods.Includes:  
      net.rubyeye.xmemcached.MemcachedClientBuilder.getCommandFactory  => CommandFactory getter/setter
      net.rubyeye.xmemcached.MemcachedClientBuilder.setCommandFactory  
      net.rubyeye.xmemcached.MemcachedClientBuilder.setTranscoder      => Transcoder getter/setter
      net.rubyeye.xmemcached.MemcachedClientBuilder.getTranscoder
      net.rubyeye.xmemcached.MemcachedClient.getVersions()   => get all connected memcached servers's versions
      net.rubyeye.xmemcached.MemcachedClient.getStats()      => get all connected memcached servers's stats.